--- a/style_css.css
+++ b/style_css.css
@@ -1,32 +1,36 @@
-body{          
-  margin: 0;     
-  background: linear-gradient(137deg, #020202,#161615,#0e0e0d);
+body {
+  margin: 0;
+  background: linear-gradient(137deg, #020202, #161615, #0e0e0d);
   padding: 0;
 }
+
 /*navbar*/
-.navbar{
+.navbar {
   width: 100%;
-  height: 70px;
-  background-color:#131313;
+  height: max-content;
+  background-color: #131313;
 }
-.navbar .container{
-  height: inherit;
+
+.navbar .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #131313;
   margin-top: 0%;
 }
-.navbar-menu{
+
+.navbar-menu {
   list-style-type: none;
   padding-left: 0%;
   margin-bottom: 0%;
-  background-color:#131313;
+  background-color: #131313;
 }
-.navbar-menu li{
+
+.navbar-menu li {
   display: inline-block;
 }
-.navbar-menu li a{
+
+.navbar-menu li a {
   display: inline-block;
   color: #c4c3c3;
   opacity: 0.6;
@@ -34,18 +38,21 @@ body{
   padding: 10px;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 100;
-  font-size: 13px;
+  font-size: 15px;
   margin-right: 30px;
 }
-.navbar-menu li a:hover{
+
+.navbar-menu li a:hover {
   opacity: 1;
   transition: all 0.09s ease-in-out;
 }
-.navbar-wrap{
+
+.navbar-wrap {
   display: flex;
-  flex-flow:row nowrap ;
+  flex-flow: row wrap;
 }
-.navbar-brand{
+
+.navbar-brand {
   font-size: 26px;
   text-decoration: none;
   color: #c4c3c3;
@@ -53,11 +60,13 @@ body{
   font-family: 'Times New Roman', Times, serif;
   font-weight: 500;
 }
-.navbar-brand:hover{
+
+.navbar-brand:hover {
   color: rgb(193, 193, 193);
   transition: all 0.09s ease-in-out;
 }
-.text-main{
+
+.text-main {
   color: #c4c3c3;
   display: flex;
   font-size: 15px;
@@ -70,7 +79,8 @@ body{
   opacity: 0.5;
   padding-left: 20%;
 }
-.text-title{
+
+.text-title {
   color: #c4c3c3;
   display: flex;
   font-size: 30px;
@@ -82,7 +92,8 @@ body{
   justify-content: center;
   padding-left: 5%;
 }
-.photo-main{
+
+.photo-main {
   margin-top: 50px;
   width: 70%;
   display: flex;
@@ -90,7 +101,8 @@ body{
   border-radius: 8px;
   margin-bottom: 10px;
 }
-.title-main{
+
+.title-main {
   font-size: 30px;
   font-family: 'Times New Roman', Times, serif;
   font-weight: 700;
@@ -98,24 +110,31 @@ body{
   text-align: center;
   width: 80%;
   float: left;
- 
+
 }
-.main{
-  float: left; /*Задаем обтекание*/  
-  width: 100%; /*Фиксируем ширину блока*/ 
+
+.main {
+  float: left;
+  /*Задаем обтекание*/
+  width: 100%;
+  /*Фиксируем ширину блока*/
 }
+
 .right-menu {
   color: #3f3d3e;
-  width: 250px;
+  width: max-content;
   padding-left: 20px;
   height: 100vh;
   float: right;
   margin-top: 100px;
 }
-#right-menu{
-  background-color:black;
+
+#right-menu {
+  background-color: black;
   opacity: 0;
+
 }
+
 .points {
   font-family: 'Times New Roman', Times, serif;
   font-size: 14px;
@@ -139,40 +158,170 @@ body{
   transition: all 0.09s ease-in-out;
 }
 
-.footer-container{
-  display: flex;
-  left: 0;
-  bottom: 0;
-  color: #ffffff;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: rgb(0, 0, 0);
-  align-items: center;
-  padding: 10px;
-  width: 100%;
-  height: 100px;
+
+
+/*footer*/
+.footer-container {
+  display: inline-block;
+
+  padding: 1%;
+
+  background-color: #10100f;
+  color: #c4c4c3;
+  ;
+
+  width: 90vw;
+  height: max-content;
+
   font-family: 'Times New Roman', Times, serif;
   font-size: 14px;
-  
+  font-weight: 100;
 }
-.row{
+
+.row {
   display: flex;
   align-items: center;
-  padding-left: 20%;
+  justify-content: center;
+  flex-flow: row wrap;
 }
-.row > *{
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  width: 200px;
-  margin: 10%;
+
+.row div {
+  width: max-content;
+  margin-left: 5%;
+  margin-right: 5%;
   opacity: 0.5;
 }
-.footer-name{
-  color: rgb(255, 255, 255);
-  font-weight: 100;
-  font-size: 14px;  
+
+.container-main {
+  /*шекарно, не трогать! выравнивает и адаптирует правое меню и основной текст и фото*/
+  display: flex;
+  flex-grow: column nowrap;
 }
-.footer-adres{
-  margin-right: 100px;
+
+.portfolio-main-container {
+  display: inline-flex;
+  flex-grow: column wrap;
+  color: #c4c4c3;
+  ;
+  width: 97vw;
+
+}
+
+.img-portfolio {
+  width: 90%;
+  height: max-content;
+  padding: 5%;
+  background-color: #414376;
+  border-top-right-radius: 15px;
+}
+
+.img-portfolio img {
+  width: 100%;
+  border-radius: 15px;
+}
+
+.text-portfolio {
+  width: 100vw;
+  margin: 5%;
+  color: #c4c4c3;
+}
+
+.text-about-me {
+  font-size: 26px;
+  font-weight: 500;
+  font-style: italic;
+  margin-bottom: 5%;
+  text-align: center;
+  border: 1px solid #c4c4c3;
+  ;
+  border-radius: 8px;
+  padding-bottom: 5%;
+}
+
+.text-about-me h1 {
+  text-align: center;
+  font-size: 35px;
+  font-weight: 600;
+  position: relative;
+}
+
+.text-about-me h1::before {
+  content: "";
+  position: absolute;
+  left: 7%;
+  bottom: 16px;
+  width: 150px;
+  height: 14px;
+  transform: skew(-12deg) translateX(-50%);
+  background:  #7376ca;
+  z-index: -1;
+}
+
+.text-main-portfolio {
+  font-size: 20px;
+  font-weight: 100;
+  text-align: justify;
+}
+
+.text-main-portfolio p {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.text-more {
+  margin-top: 10%;
+  font-size: 20px;
+  font-weight: 100;
+  text-align: justify;
+  color: #c4c3c3;
+}
+
+.text-more>p {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 400;
+  background-color: #32335a;
+  border-radius: 8px;
+}
+
+.text-more img {
+  display: inline-flex;
+  justify-content: center;
+  width: 30px;
+  margin-right: 5px;
+}
+
+.text-more li {
+  margin-left: -15px;
+}
+
+.contacts div {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.table-name {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.table {
+  white-space: wrap;
+  margin-top: 10%;
+  width: fit-content;
+  text-align: justify;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 25px;
+}
+
+.link-tezis a {
+  text-decoration: none;
+  color: #c4c4c3;
+}
+
+.link-tezis a:hover {
+  color: #32335a;
 }
