--- a/style_css.css
+++ b/style_css.css
@@ -122,7 +122,7 @@ body {
 
 .right-menu {
   color: #3f3d3e;
-  width: max-content;
+  width: min-content;
   padding-left: 20px;
   height: 100vh;
   float: right;
