--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   opacity: 0.6;
   text-decoration: none;
   padding: 10px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 100;
   font-size: 15px;
   margin-right: 30px;
@@ -66,7 +66,7 @@
   opacity: 0.6;
   text-decoration: none;
   padding: 10px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 100;
   font-size: 15px;
   margin-right: 30px;
@@ -87,7 +87,7 @@
   text-decoration: none;
   color: #c4c3c3;
   margin: 10px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 500;
 }
 
@@ -100,7 +100,7 @@
   color: #c4c3c3;
   display: flex;
   font-size: 15px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 100;
   width: 70%;
   min-width: 200px;
@@ -108,14 +108,13 @@
   margin-left: 15%;
   justify-content: center;
   opacity: 0.5;
-
 }
 
 .text-title {
   color: #c4c3c3;
   display: flex;
   font-size: 30px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 700;
   width: 70%;
   margin-left: 15%;
@@ -134,13 +133,12 @@
 
 .title-main {
   font-size: 30px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-weight: 700;
   color: #c4c3c3;
   text-align: center;
   width: 80%;
   float: left;
-
 }
 
 .main {
@@ -151,7 +149,7 @@
 }
 
 .right-menu {
-  color: #c4c3c3;;
+  color: #c4c3c3;
   width: min-content;
   height: 100vh;
   float: right;
@@ -161,13 +159,12 @@
 #right-menu {
   background-color: black;
   opacity: 0;
-
 }
 
 .points {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 14px;
-  color: #c4c3c3;;
+  color: #c4c3c3;
   display: block;
   padding: 12px;
   padding-left: 30px;
@@ -187,8 +184,6 @@
   transition: all 0.09s ease-in-out;
 }
 
-
-
 /*footer*/
 .footer-container {
   display: inline-block;
@@ -197,12 +192,10 @@
 
   background-color: #10100f;
   color: #c4c4c3;
-  ;
-
   width: 90vw;
   height: max-content;
 
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 14px;
   font-weight: 100;
 }
@@ -232,7 +225,6 @@
   flex-grow: column wrap;
   color: #c4c4c3;
   width: 100vw;
-
 }
 
 .img-portfolio {
@@ -244,7 +236,7 @@
   opacity: 70%;
 }
 
-.img-portfolio{
+.img-portfolio {
   width: 100%;
   border-radius: 15px;
   background-image: img-portfolio;
@@ -268,7 +260,7 @@
   margin-bottom: 5%;
   text-align: center;
   border: 1px solid #c4c4c3;
-  
+
   border-radius: 8px;
   padding-bottom: 5%;
 }
@@ -289,7 +281,7 @@
   width: 20%;
   height: 14px;
   transform: skew(-22deg) translateX(-70%);
-  background:  #7376ca;
+  background: #7376ca;
   z-index: -1;
 }
 
@@ -301,7 +293,6 @@
   text-align: justify;
   width: 50%;
   margin-left: 25%;
-
 }
 
 .text-main-portfolio p {
@@ -319,7 +310,7 @@
   color: #c4c3c3;
 }
 
-.text-more>p {
+.text-more > p {
   text-align: center;
   font-size: 25px;
   font-weight: 400;
@@ -370,18 +361,70 @@
   color: #32335a;
 }
 
-.body-new-portfolio{
-  background-color: #e4e4e4;
+.body-new-portfolio {
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
 }
-.wrapper{
+.text-navb {
+  position: relative;
+  height: 100vh;
+  top: 0;
+  background-color: #32335a;
+  background-image: url(gifs/liddrivencavity.gif);
+  padding: 30px;
+}
+
+.text-name {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+
+  width: 50%;
+  min-width: 350px;
+  height: 200px;
+
+  margin-left: 25%;
+  margin-top: 30px;
+
+  background-color: #f8f5f5;
+  border: 1px solid rgb(120, 108, 108);
+  border-radius: 16px;
+
+  font-weight: 600;
+
+  z-index: 1;
+}
+.text-name h1 {
+  display: block;
+  font-size: 30px;
+  margin-top: 30px;
+}
+.text-name ::before {
+  content: "";
+  position: absolute;
+  left: 7%;
+  bottom: 16px;
+  width: 20%;
+  height: 14px;
+
+  transform: skew(-22deg) translateX(-70%);
+  background: #7376ca;
+  z-index: -1;
+}
+
+/*набор текста печатная машинка*/
+.wrapper {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
-  z-index: 100;
+  align-items: center;
 }
-.text{
+.text h2 {
+  margin-bottom: 30px;
+  margin-top: 10px;
   display: flex;
   color: #7376ca;
   font-family: monospace;
@@ -389,65 +432,121 @@
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid #7376ca;
-  width: 39ch;
-  animation: cursor 0.75s step-end infinite,
-  printed-text 3s steps(39);
-
+  width: 18ch;
+  animation: cursor 0.75s step-end infinite, printed-text 3s steps(18);
 }
 
-@keyframes cursor{
-  0%{
+@keyframes cursor {
+  0% {
     border-color: #7376ca;
   }
-  50%{
+  50% {
     border-color: transparent;
   }
-  100%{
+  100% {
     border-color: #7376ca;
   }
 }
-@keyframes printed-text{
-  from{
+@keyframes printed-text {
+  from {
     width: 0;
   }
 }
-.wrapper-parallax{
+
+/*parallax*/
+.wrapper-parallax {
   margin: 0 auto;
   margin-top: 5rem;
   display: grid;
   place-items: center;
-
+  width: 100%;
 }
-.button{
+.button {
   display: grid;
   place-items: center;
 
-  color: green;
-  border: 0;
+  width: max-content;
+  height: 50px;
+  color: rgb(2, 23, 43);
+  background-color: #ffffff;
+  border: 1px solid rgb(62, 62, 62);
   border-radius: 4px;
   cursor: pointer;
+  
+  margin: 20px;
+  
+  box-shadow: 0px 5px 10px 0px rgba(0,0, 0, 0.5);
+}
+.a{
+text-decoration: none;
+
+}
+.button:hover{
+  background-color: #d0d2df;
   transition: background-color 0.135s ease-in-out;
 }
-.title{
+.title {
   margin: 3px;
 }
-.circle{
+.circle {
   position: absolute;
   top: 3rem;
   right: 3rem;
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: orange;
+  background-color: rgb(135, 179, 255);
+
+  
+  box-shadow: 0px 10px 5px 0px rgba(0,0, 0, 0.4);
 }
-.parallax{
-  width: 50%;
+.circle2 {
+  position: absolute;
+  bottom: 5rem;
+  right: 6rem;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(23, 37, 171);
+
+  
+  box-shadow: 0px 10px 5px 0px rgba(0,0, 0, 0.4);
+}
+.circle3 {
+  position: absolute;
+  bottom: 1rem;
+  left: 6rem;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgb(9, 16, 79);
+  
+  box-shadow: 0px 10px 5px 0px rgba(0,0, 0, 0.4);
+}
+
+.parallax {
+  width: 70%;
   padding: 5rem;
   min-height: 10rem;
   position: relative;
   overflow: hidden;
 }
-.parallax__layer{
+.parallax__layer {
   transition: transform 0.3s linear;
+  z-index: -1;
 }
+.more-info{
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 30px;
 
+  border-radius: 8px;
+}
+.photo-portfolio{
+  width: 50%;
+}
+#more-text-interesting{
+  display: none;
+}
